# BridgePlayingProgram

./: .gitignore  Bridge.cpp  Bridge.h  CMakeLists.txt  MCTS.cpp  MCTS.h  MCTS_XO.cpp  MCTS_XO.h  README.md  XOBoard.cpp  XOBoard.h  XO_MCTS.cpp  bridge_MCTS.cpp  testBoards.json  tictactoe.cpp  vcpkg-configuration.json  vcpkg.json
config/: bridgeGamestate.json
config/bridge/: CMakeLists.txt  bridgeGamestate.json
src/: BridgeController.cpp  BridgeController.hpp  CMakeLists.txt  main.cpp
src/bridge/: CMakeLists.txt  bridgeCard.cpp  bridgeCard.h  bridgeGamestate.cpp  bridgeGamestate.h
src/bridge/utils/: bridgeUtils.cpp  bridgeUtils.h
src/controllers/: BridgeMCTSController.cpp  BridgeMCTSController.hpp  BridgeMCTSGame.h  CMakeLists.txt  MCTSGame.h  MCTreeNode.h
src/includes/: CMakeLists.txt
src/includes/json/: CMakeLists.txt
src/includes/range-v3/: CMakeLists.txt
src/includes/tl/: CMakeLists.txt
src/interfaces/: CMakeLists.txt  IObserver.hpp  ISubject.cpp  ISubject.hpp
src/models/: BridgeMCTreeNode.hpp  BridgeMCTreeNode.hpp.in  CMakeLists.txt  MCTree.cpp  MCTree.hpp  MCTreeNode.cpp  MCTreeNode.hpp  bridgeMCTreeNode.cpp  bridgeMCTreeNode.hpp.in  bridgeMctsFacade.cpp  bridgeMctsFacade.hpp
src/models/bridge/: CMakeLists.txt  bridgeCard.cpp  bridgeCard.hpp  bridgeGamestate.cpp  bridgeGamestate.h  bridgeGamestate.hpp  bridgeGamestateLoader.cpp  bridgeGamestateLoader.hpp
src/models/bridge/utils/: CMakeLists.txt  bridgeExpected.hpp  bridgeUtils.cpp  bridgeUtils.h  bridgeUtils.hpp
src/utils/: CMakeLists.txt  bridgeUtils.h
src/views/: CMakeLists.txt  bridgeTerminalView.cpp  bridgeTerminalView.hpp  viewUtils.cpp  viewUtils.hpp
src/views/bridge/: CMakeLists.txt  bridgeTerminalView.cpp  bridgeTerminalView.hpp  viewUtils.cpp  viewUtils.hpp
tests/: CMakeLists.txt  converterTests.cc
tests/bridge/: bridgeCardTests.cc
tests/bridge/utils/: CMakeLists.txt  converterTests.cc
tests/models/: CMakeLists.txt  MCTreeNodeTests.cc  bridgeMCTreeNodeTests.cc
tests/models/bridge/: CMakeLists.txt  bridgeCardTests.cc  bridgeGamestateLoaderTests.cc  bridgeGamestateTests.cc  testBoards.json
tests/models/bridge/utils/: CMakeLists.txt  converterTests.cc
tests/views/: CMakeLists.txt  bridgeTerminalViewTests.cc  viewUtilsTests.cc
