add_subdirectory(bridge)



#add_executable(
#    bridgeMCTreeNodeTests 
#    bridgeMCTreeNodeTests.cc
#)
#
#target_link_libraries(
#    bridgeMCTreeNodeTests 
#    GTest::gtest_main
#    bridgeMCTreeNode
#)
#
#target_include_directories(
#    bridgeMCTreeNodeTests
#    PUBLIC
#    ${CMAKE_BINARY_DIR}/src
#) 
